@startuml graph
'https://plantuml.com/class-diagram


abstract class AbstractFlyingObject {
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}

abstract class AbstractAircraft {
    # int maxHp
    # int hp
    # BulletStrategy bulletStrategy:BulletStrategy

    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease): void
    + increaseHp(int increase): void
    + getHp(): int
    + setBulletStrategy(BulletStrategy bulletStrategy): void
    + abstract shoot(): List<BaseBullet>
}


class HeroAircraft {
    - {static} instance:HeroAircraft 
    + {static} getHeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp):HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)t
    + forward():void
    + shoot():List<BaseBullet>
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward(): void
    + shoot(): List<BaseBullet>
}

class EliteEnemy {
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward(): void
    + shoot(): List<BaseBullet>
}

class ElitePlusEnemy {
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward(): void
    + shoot(): List<BaseBullet>
}

class EliteProEnemy{
    + EliteProEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward(): void
    + shoot(): List<BaseBullet>
}

class BossEnemy {
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward(): void
    + shoot(): List<BaseBullet>
}



class BaseBullet{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward(): void
    + getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY, int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY, int speedX, int speedY, int power)
}

interface BulletStrategy {
    + abstract fire(AbstractAircraft aircraft):List<BaseBullet>
}

class NoBulletStrategy {
    + fire(AbstractAircraft aircraft):List<BaseBullet>
}
class SingleBulletStrategy {
    + fire(AbstractAircraft aircraft):List<BaseBullet>
}
class DoubleBulletStrategy {
    + fire(AbstractAircraft aircraft):List<BaseBullet>
}
class TripleBulletStrategy {
    + fire(AbstractAircraft aircraft):List<BaseBullet>
}
class HeroBulletStrategy {
    + fire(AbstractAircraft aircraft):List<BaseBullet>
}
class HeroPlusBulletStrategy {
    + fire(AbstractAircraft aircraft):List<BaseBullet>
}
class HeroProBulletStrategy {
    + fire(AbstractAircraft aircraft):List<BaseBullet>
}

interface EnemyFactory {
    + createEnemy(int locationX, int locationY): AbstractAircraft
}
class MobEnemyFactory {
    + createEnemy(int locationX, int locationY): MobEnemy
}
class EliteEnemyFactory {
    + createEnemy(int locationX, int locationY): EliteEnemy
}
class ElitePlusEnemyFactory {
    + createEnemy(int locationX, int locationY): ElitePlusEnemy
}
class EliteProEnemyFactory {
    + createEnemy(int locationX, int locationY): EliteProEnemy
}
class BossEnemyFactory {
    + createEnemy(int locationX, int locationY): BossEnemy
}

abstract class BaseProp {
    + BaseProp(int locationX, int locationY, int speedX, int speedY)
    + forward(): void
    + effect(HeroAircraft heroAircraft): void
}
class PropBlood {
    + PropBlood(int locationX, int locationY, int speedX, int speedY)
    + effect(HeroAircraft heroAircraft): void
}
class PropBullet {
    + PropBullet(int locationX, int locationY, int speedX, int speedY)
    + effect(HeroAircraft heroAircraft): void
}
class PropBomb {
    + PropBomb(int locationX, int locationY, int speedX, int speedY)
    + effect(HeroAircraft heroAircraft): void
}
class PropBulletPlus {
    + PropBulletPlus(int locationX, int locationY, int speedX, int speedY)
    + effect(HeroAircraft heroAircraft): void
}
class PropFactory {
    + createProp(PropTypeEnum Type, int locationX, int locationY, int speedX, int speedY): BaseProp
}



AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- BaseProp
AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- ElitePlusEnemy
AbstractAircraft <|-- EliteProEnemy
AbstractAircraft <|-- BossEnemy

BulletStrategy <--o AbstractAircraft

BulletStrategy <|.. NoBulletStrategy
BulletStrategy <|.. SingleBulletStrategy
BulletStrategy <|.. DoubleBulletStrategy
BulletStrategy <|.. TripleBulletStrategy
BulletStrategy <|.. HeroBulletStrategy
BulletStrategy <|.. HeroPlusBulletStrategy
BulletStrategy <|.. HeroProBulletStrategy

EnemyFactory <|.. MobEnemyFactory
EnemyFactory <|.. EliteEnemyFactory
EnemyFactory <|.. ElitePlusEnemyFactory
EnemyFactory <|.. EliteProEnemyFactory
EnemyFactory <|.. BossEnemyFactory

BaseProp <|-- PropBlood
BaseProp <|-- PropBullet
BaseProp <|-- PropBomb
BaseProp <|-- PropBulletPlus

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

@enduml